# occt_QT_demo

./: Appfunc.cpp  Appfunc.h  CMakeLists.txt  GlobalVaries.cpp  GlobalVaries.h  MakeBottle.cpp  MakeBottle.h  OcctGlTools.cpp  OcctGlTools.h  OcctQtViewer.cpp  OcctQtViewer.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h
